--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="crime_solved_label">Solved</string>
     <string name="date_picker_title">Date of crime: </string>
     <string name="time_picker_title">TIme of crime:</string>
+    <string name="ok_button_text">Ok</string>
 </resources>
 
