Add a toolbar that show the number of crimes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="date_picker_title">Date of crime: </string>
     <string name="time_picker_title">TIme of crime:</string>
     <string name="ok_button_text">Ok</string>
+    <string name="new_crime">New Crime</string>
+    <string name="show_subtitle">Show subtitle</string>
+    <string name="hide_subtitle">Hide subtitle</string>
+    <string name="subtitle_format">%1$s crimes</string>
 </resources>
 
