add a text view and a button in the list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="hide_subtitle">Hide subtitle</string>
     <string name="subtitle_format">%1$s crimes</string>
     <string name="crime_deletion">Delete crime</string>
+    <string name="no_crimes_on_list">No crimes in the list</string>
     <plurals name="subtitle_plural">
         <item quantity="one">%1$s crime</item>
         <item quantity="other">%1$s crimes</item>
